# KloakDB

./: .gitignore  .gitmodules  Aggregate.cpp  Aggregate.h  BUILD.bazel  CMakeCache.txt  CMakeLists.txt  CMakeLists_BACKUP_13367.txt  CMakeLists_BASE_13367.txt  CMakeLists_LOCAL_13367.txt  DO.cpp  DOClient.h  DOServer.cpp  DataOwnerClient.cpp  DataOwnerClient.h  DataOwnerImpl.cpp  DataOwnerImpl.h  DataOwnerPrivate.h  Expressions.cpp  Expressions.h  Filter.cpp  Filter.h  Flatbuffers.cpp  Generalize.cpp  HB.cpp  HashJoin.cpp  HashJoin.h  HonestBrokerClient.cpp  HonestBrokerClient.h  HonestBrokerImpl.cpp  HonestBrokerPrivate.cpp  InfoPrivate.cpp  Logger.cpp  Logger.h  Makefile  Project.cbp  README.md  Repartition.cpp  Repartition.h  SimpleJoin.cpp  (+55 more)
data/: CMakeLists.txt  postgres_client.cpp  postgres_client.h  pqxx_compat.cpp  pqxx_compat.h
deploy/: Makefile  exp5_read.py  log_server.py  readin.py  required.txt  requirements.txt
deploy/protos/: logger.proto
deploy/results/: asp_encrypt_k_results.txt
emp-sh2pc/: CMakeLists.txt
emp-sh2pc/test/: left_deep.cpp
experiment_data/exp1/: aspirin_profile.txt  comorbidity.txt  dosage_study.txt
generalize/: CMakeLists.txt  gen_test.cpp
glog_lib/: BUILD.bazel  Logger.h
logger/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerDefs.h
operators/: Aggregate.cpp  Aggregate.h  BUILD.bazel  CMakeLists.txt  Expressions.cpp  Expressions.h  Filter.cpp  Filter.h  Generalize.cpp  Generalize.h  HashJoin.cpp  HashJoin.h  Repartition.cpp  Repartition.h  Sort.cpp  Sort.h  Truncate.cpp  Truncate.h  filter_test.cpp  filter_test.h  join_test.cpp  join_test.h  postgres_client.h  sort_test.cpp
picosha2/: BUILD.bazel  picosha2.h
postgres_client/: BUILD.bazel  postgres_client.h  postgres_client_test.cpp  postgres_client_test.h
pqxx_lib/: BUILD.bazel  pqxx_compat.cpp  pqxx_compat.h
proto/: BUILD.bazel
rpc/: .gitignore  BUILD.bazel  CMakeLists.txt  DOClient.cpp  DOClient.h  DOServer.cpp  DataOwnerClient.cpp  DataOwnerClient.h  DataOwnerImpl.cpp  DataOwnerImpl.h  DataOwnerPrivate.cpp  DataOwnerPrivate.h  HBGeneralize.cpp  HBGeneralize.h  HonestBrokerClient.cpp  HonestBrokerClient.h  HonestBrokerImpl.cpp  HonestBrokerImpl.h  HonestBrokerPrivate.cpp  HonestBrokerPrivate.h  InfoPrivate.cpp  InfoPrivate.h  Makefile  Repartition.cpp  Repartition.h  cmake_install.cmake  vaultdb.grpc.pb.cc  vaultdb.pb.cc  vaultdb.pb.h  vaultdb.proto
rpc/protos/: vaultdb.proto
scripts/: exp10_agg.sh  exp10_join.sh  exp3.sh  exp5.sh  exp6_dos_scale.sh  exp7_asp.sh  exp7_com.sh  exp7_dos.sh  exp9_scale.sh  mpc_script_p1.sh  mpc_script_p2.sh  run_count.sh  run_hb.sh  run_hb_no_compile.sh  run_no_do_hb.sh  tpch10_2_hosts.sh  tpch3_2_hosts.sh  tpch5_2_hosts.sh  tpch_gen_2_hosts.sh
sgx/: CMakeLists.txt  VaultDB.edl  VaultDBEnclave.cpp  VaultDBSGXApp.cpp
sgx/App/: CMakeLists.txt  VaultDBSGXApp.cpp  VaultDBSGXApp.h
sgx/Cxx11SGXDemo/: Makefile
sgx/Cxx11SGXDemo/App/: App.cpp
sgx/Cxx11SGXDemo/App/TrustedLibrary/: Logger.cpp  Logger.h  postgres_client.cpp  postgres_client.h  pqxx_compat.cpp  pqxx_compat.h
sgx/Cxx11SGXDemo/Enclave/: Enclave.config.xml  Enclave.edl
sgx/Cxx11SGXDemo/Enclave/TrustedLibrary/: .HashJoin.cpp.swp  .Kloak.cpp.swp  .Kloak.edl.swp  HashJoin.cpp  Kloak.cpp  Kloak.edl  postgres_client.cpp
sgx/Enclave/: CMakeLists.txt  Enclave.config.xml  VaultDBEnclave.cpp
simplejoin/: SimpleJoin.cpp  SimpleJoin.h  test_simplejoin.cpp
sql/: FDW_Guide.md  FDW_Guide.txt  asp_rand.sql  asp_rand_all_tables.sql  aspirin_fdw.sql  aspirin_profile.sql  cdiff_cohort_create.sql  comorbidity.sql  comorbidity_test.py  create-all-scale-up-dosage-views.sh  create-exp-views.sh  create-exp5-rand.sh  create-gen-exp-views.sh  create-rand-all-asp-views.sh  create-rand-asp-views.sh  create-random-db.sh  create-random-tables.sql  create-scale-up-dosage.sh  create-small-views.sh  create-v4-dosage-scale-samples.sh  dosage_scale.sql  dosage_scale_up_all_tables.sql  dosage_study.sql  exp.sql  exp5.sql  fdw_test.py  gen_test.sql  get_count_star.sql  join_random.sql  random_demographics.sql  random_diagnoses.sql  random_meds.sql  random_vitals.sql  scale_up_dosage.sql  small_view_gen.sql  table_defs.sql
superbuild/: CMakeLists.txt
table_statistics/: BUILD.bazel  TableStatistics.cpp  TableStatistics.h
test/: CMakeLists.txt
test/data/: CMakeLists.txt  health_lnk_schema_test.cpp  postgres_client_test.cpp  postgres_client_test.h  tpch_test.cpp  vdb3.cpp
test/experiments/: CMakeLists.txt  agg_two_party.cpp  agg_two_party.h  aspirin_profile_test.cpp  comorbidity_test.cpp  dist_gen_test.cpp  dist_gen_test.h  dist_tpch10.cpp  dist_tpch10.h  dist_tpch3.cpp  dist_tpch3.h  dist_tpch5.cpp  dist_tpch5.h  distributed_aspirin_profile.cpp  distributed_aspirin_profile.h  distributed_comorb.cpp  distributed_comorb.h  distributed_dosage.cpp  distributed_dosage.h  dosage_study_test.cpp  exp2_kanonjoins.cpp  exp3.cpp  exp3.h  exp3_reparition_scaling.cpp  exp3_reparition_scaling.h  exp4.cpp  exp4.h  exp5.cpp  exp5.h  join_two_party.cpp  join_two_party.h  tpch_gen_test.cpp  tpch_gen_test.h
test/operators/: CMakeLists.txt  aggregate_test.cpp  filter_test.cpp  join_test.cpp  repart_test.cpp  sort_test.cpp
